--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,9 +6,28 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Pokemon.Types.Psyhic",NewTagName="Pokemon.Types.Psychic")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Character.Class.Archer",DevComment="")
 +GameplayTagList=(Tag="Character.Class.Mage",DevComment="")
 +GameplayTagList=(Tag="Character.Class.Warrior",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Bug",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Dark",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Dragon",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Electric",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Fairy",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Fighting",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Fire",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Flying",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Ghost",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Grass",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Ground",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Ice",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Normal",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Poison",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Psychic",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Rock",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Steel",DevComment="")
++GameplayTagList=(Tag="Pokemon.Types.Water",DevComment="")
 
